syntax = "proto3";

package intermediate.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "openauth/v1/openauth.proto";

service IntermediateService {
  // Creates a new intermediate session or session and cookies the requester.
  rpc SignInWithEmail(SignInWithEmailRequest) returns (SignInWithEmailResponse) {
    option (google.api.http) = {
      post: "/intermediate/v1/email-signin",
      body: "*"
    };
  }

  // Gets a list of intermediate organizations.
  rpc ListIntermediateOrganizations(ListIntermediateOrganizationsRequest) returns (ListIntermediateOrganizationsResponse) {
    option (google.api.http) = {
      get: "/intermediate/v1/organizations"
    };
  }
}

message IntermediateOrganization {
  string id = 1;
  string project_id = 2;
  string display_name = 3;
  bool log_in_with_google_enabled = 4;
  bool log_in_with_microsoft_enabled = 5;
  bool log_in_with_password_enabled = 6;
}

message ListIntermediateOrganizationsRequest {
  // The project ID to list intermediate organizations for.
  string project_id = 1;
  // The email associated with the intermediate session.
  string email = 2;
}

message ListIntermediateOrganizationsResponse {
  repeated IntermediateOrganization organizations = 1;
  string next_page_token = 2;
}

message SignInWithEmailRequest {
  // The email address to sign in with.
  string email = 1;
}

message SignInWithEmailResponse {
  // The token for the intermediate session or session created by the SignInWithEmail request.
  string SessionToken = 1;
}